--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -176,7 +176,7 @@
                             </div>
 
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "Departments" | localize }}
                                 </label>
@@ -185,7 +185,7 @@
                                             class="form-control"
                                             id="DepartmentId" [(ngModel)]="project.departmentId"
                                             #departmentIdModel="ngModel"
-                                            #departmentId required>
+                                            #departmentId >
                                         <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
                                     </select>
 
