--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -11,12 +11,12 @@
   <section class="content px-2" dir="rtl"> 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12">
+        <!--<div class="col-12">
           <div class="alert alert-info alert-dismissible">
             <h6><i class="icon fa fa-info"></i> This is a sample Dashboard which doesn't show any server side data.
               However, you can develop your own dashboard inspired by this one and its source code.</h6>
           </div>
-        </div>
+        </div>-->
       </div>
       <div class="row">
         <div class="col-lg-3 col-6">
@@ -28,12 +28,12 @@
             <div class="icon">
               <i class="fas fa-star"></i>
             </div>
-            <a href="https://github.com/aspnetboilerplate/aspnetboilerplate/stargazers"
+            <!--<a href="https://github.com/aspnetboilerplate/aspnetboilerplate/stargazers"
               class="small-box-footer"
               target="_blank">
               More info
               <i class="fas fa-arrow-circle-right"></i>
-            </a>
+            </a>-->
           </div>
         </div>
         <div class="col-lg-3 col-6">
@@ -45,12 +45,12 @@
             <div class="icon">
               <i class="fas fa-users"></i>
             </div>
-            <a href="https://github.com/aspnetboilerplate/aspnetboilerplate/graphs/contributors"
+            <!--<a href="https://github.com/aspnetboilerplate/aspnetboilerplate/graphs/contributors"
               class="small-box-footer"
               target="_blank">
               More info
               <i class="fas fa-arrow-circle-right"></i>
-            </a>
+            </a>-->
           </div>
         </div>
         <div class="col-lg-3 col-6">
@@ -62,12 +62,12 @@
             <div class="icon">
               <i class="fas fa-tools"></i>
             </div>
-            <a href="https://github.com/aspnetboilerplate/aspnetboilerplate/network/dependents"
+            <!--<a href="https://github.com/aspnetboilerplate/aspnetboilerplate/network/dependents"
               class="small-box-footer"
               target="_blank">
               More info
               <i class="fas fa-arrow-circle-right"></i>
-            </a>
+            </a>-->
           </div>
         </div>
         <div class="col-lg-3 col-6">
@@ -79,16 +79,16 @@
             <div class="icon">
               <i class="fas fa-code"></i>
             </div>
-            <a href="https://github.com/aspnetboilerplate/aspnetboilerplate/network/members"
+            <!--<a href="https://github.com/aspnetboilerplate/aspnetboilerplate/network/members"
               class="small-box-footer"
               target="_blank">
               More info
               <i class="fas fa-arrow-circle-right"></i>
-            </a>
+            </a>-->
           </div>
         </div>
       </div>
-      <div class="row">
+      <!--<div class="row">
         <div class="col-12 col-sm-6 col-md-3">
           <div class="info-box">
             <span class="info-box-icon bg-primary elevation-1">
@@ -115,8 +115,8 @@
             </div>
           </div>
         </div>
-        <div class="clearfix hidden-md-up"></div>
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="clearfix hidden-md-up"></div>-->
+        <!--<div class="col-12 col-sm-6 col-md-3">
           <div class="info-box mb-3">
             <span class="info-box-icon bg-info elevation-1">
               <i class="fas fa-tag"></i>
@@ -141,9 +141,9 @@
               </span>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
+        </div>-->
+      <!--</div>-->
+      <!--<div class="row">
         <div class="col-md-12">
           <div class="card">
             <div class="card-header">
@@ -290,7 +290,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
   </section>
 </div>
