--- a/angular/src/app/requests/request-view/request-view.component.html
+++ b/angular/src/app/requests/request-view/request-view.component.html
@@ -177,9 +177,48 @@
                                 </div>
                             </div>
 
+                            <div class="row col-12">
+                                <div class="form-group  required col-2">
+                                    <label class="col-md-12 col-form-label" for="ADDRESS">
+                                        {{ "SiteReadinessTime" | localize }}
+                                    </label>
+
+                                </div>
+
+                                <div class="form-group row required col-2">
+                                    <label class="col-md-6 col-form-label" for="ADDRESS">
+                                        {{ "Min" | localize }}
+                                    </label>
+                                    <div class="col-md-5">
+                                        <input type="number" disabled
+                                               min="1" max="60"
+                                               class="form-control"
+                                               name="inspectionTime"
+                                               id="inspectionTime"
+                                               [(ngModel)]="request.min">
+                                        <!--(change)="hourse < 0 ? hourse = 0 : hourse; hourse > 60 ? hourse = 0 : hourse;"-->
+                                    </div>
+                                </div>
+
+                                <div class="form-group row required col-2">
+                                    <label class="col-md-6 col-form-label" for="ADDRESS">
+                                        {{ "Hours" | localize }}
+                                    </label>
+                                    <div class="col-md-5">
+                                        <input type="number" disabled
+                                               min="1" max="60"
+                                               class="form-control"
+                                               name="inspectionTime"
+                                               id="inspectionTime"
+                                               [(ngModel)]="request.hours">
+                                        <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="Description">
-                                    {{ "Description" | localize }}
+                                    {{ "Commetns" | localize }}
                                 </label>
                                 <div class="col-md-9">
                                     <input type="text" disabled
@@ -299,7 +338,7 @@
 
                             <div class="form-group row required col-6" *ngIf="hasSample">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "InspectionTestTypes" | localize }}
+                                    {{ "TypeofTest" | localize }}
                                 </label>
                                 <div class="col-md-9">
                                     <select name="testType"
