--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -22,7 +22,7 @@
 
                         <div class="row">
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row required col-11">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "ChooseProject" | localize }}
                                 </label>
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
+                            <!--<div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="Name">
                                     {{ "ProjectName" | localize }}
                                 </label>
@@ -54,7 +54,7 @@
                                     <abp-validation-summary [control]="projectnameModel"
                                                             [controlEl]="projectnameE1"></abp-validation-summary>
                                 </div>
-                            </div>
+                            </div>-->
 
 
                             <div class="form-group row required col-6">
@@ -151,7 +151,7 @@
                                     <input type="date" [disabled]="request.id>0"
                                            class="form-control"
                                            name="inspectionDate"
-                                           [min]="minDate"
+                                           [min]="completeDatemodel"
                                            id="inspectionDate"
                                            required
                                            [(ngModel)]="InspectionDatemodel"
@@ -168,7 +168,25 @@
                                     </label>
 
                                 </div>
-
+                                <div class="form-group row required col-2">
+                                    <label class="col-md-6 col-form-label" for="ADDRESS">
+                                        {{ "Hours" | localize }}
+                                    </label>
+                                    <div class="col-md-5">
+                                        <input type="number"
+                                               min="1" max="60"
+                                               class="form-control"
+                                               name="Hours"
+                                               id="Hours"
+                                               required
+                                               [(ngModel)]="request.hours"
+                                               #HoursModel="ngModel"
+                                               #Hours />
+                                        <abp-validation-summary [control]="HoursModel"
+                                                                [controlEl]="Hours"></abp-validation-summary>
+                                        <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
+                                    </div>
+                                </div>
                                 <div class="form-group row required col-2">
                                     <label class="col-md-6 col-form-label" for="ADDRESS">
                                         {{ "Min" | localize }}
@@ -189,25 +207,7 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group row required col-2">
-                                    <label class="col-md-6 col-form-label" for="ADDRESS">
-                                        {{ "Hours" | localize }}
-                                    </label>
-                                    <div class="col-md-5">
-                                        <input type="number"
-                                               min="1" max="60"
-                                               class="form-control"
-                                               name="Hours"
-                                               id="Hours"
-                                               required
-                                               [(ngModel)]="request.hours"
-                                               #HoursModel="ngModel"
-                                               #Hours />
-                                        <abp-validation-summary [control]="HoursModel"
-                                                                [controlEl]="Hours"></abp-validation-summary>
-                                        <!--(change)="request.hours < 0 ? request.hours = 0 : request.hours; request.hours > 60 ? request.hours = 0 : request.hours;"-->
-                                    </div>
-                                </div>
+
                             </div>
                             <div class="form-group row  col-6">
                                 <label class="col-md-3 col-form-label" for="Description">
