- Add Project Flow

--- a/angular/src/app/project/create-project/create-project.component.html
+++ b/angular/src/app/project/create-project/create-project.component.html
@@ -230,7 +230,7 @@
             </div>
         </div>
 
-        <div class="form-group row required">
+        <!--<div class="form-group row required">
             <label class="col-md-3 col-form-label" for="ADDRESS">
                 {{ "LabProjectManager" | localize }}
             </label>
@@ -246,7 +246,7 @@
                 <abp-validation-summary [control]="labProjectManagerIdModel"
                                         [controlEl]="labProjectManagerId"></abp-validation-summary>
             </div>
-        </div>
+        </div>-->
 
         <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="ADDRESS">
