--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -22,8 +22,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-success">
                   <div class="inner">
-                      <h3>8.2k+</h3>
-                      <p>Stargazers</p>
+                      <h3>{{dashBoard.stackholderDto.totalContractorUsers}}</h3>
+                      <p>{{ "TotalContractors" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-star"></i>
@@ -39,8 +39,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-info">
                   <div class="inner">
-                      <h3>140+</h3>
-                      <p>Contributors</p>
+                      <h3>{{dashBoard.stackholderDto.totalContractorUsers}}</h3>
+                      <p>{{ "Consultants" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-users"></i>
@@ -56,8 +56,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-warning">
                   <div class="inner">
-                      <h3>1.6k+</h3>
-                      <p>Used / Dependents</p>
+                      <h3>{{dashBoard.projectStatisticsDto.totalProjectApproved}}</h3>
+                      <p>{{ "ActivatedProjects" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-tools"></i>
@@ -73,8 +73,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-primary">
                   <div class="inner">
-                      <h3>3.1k+</h3>
-                      <p>Forks</p>
+                      <h3>{{dashBoard.projectStatisticsDto.totalProjectUnderReview}}</h3>
+                      <p>{{ "ProjectsUnderReview" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-code"></i>
@@ -90,8 +90,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-success">
                   <div class="inner">
-                      <h3>8.2k+</h3>
-                      <p>Stargazers</p>
+                      <h3>{{dashBoard.requestStatisticsDto.totalRequestPending}}</h3>
+                      <p>{{ "TotalPendingRequests" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-star"></i>
@@ -107,8 +107,8 @@
           <div class="col-lg-3 col-6">
               <div class="small-box bg-info">
                   <div class="inner">
-                      <h3>140+</h3>
-                      <p>Contributors</p>
+                      <h3>{{dashBoard.requestStatisticsDto.totalRequestApproved}}</h3>
+                      <p>{{ "FinishedRequests" | localize }}</p>
                   </div>
                   <div class="icon">
                       <i class="fas fa-users"></i>
